# synix-agent-mesh

./: .gitignore  .synix  README.md  config.example.toml  llms.txt  pipeline.py  pyproject.toml
.github/prompts/: claude_review.md  openai_review.md
.github/scripts/: blind_review.py
.github/workflows/: blind-review.yml  ci.yml  release.yml
src/synix_agent_mesh/: cli.py  config.py  doctor.py  pipeline.py  server.py  setup.py
tests/: test_auto_build.py  test_cli.py  test_config.py  test_doctor.py  test_setup.py  test_viewer.py
