[project]
name = "synix-agent-mesh"
version = "0.1.0"
description = "Agent capture layer — cross-device memory mesh with viewer and MCP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Mark Lubin" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "synix[mesh,mcp,viewer]>=0.20.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/marklubin/synix-agent-mesh"
Repository = "https://github.com/marklubin/synix-agent-mesh"
Issues = "https://github.com/marklubin/synix-agent-mesh/issues"

[project.scripts]
synix-agent-mesh = "synix_agent_mesh.cli:cli"
sam = "synix_agent_mesh.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/synix_agent_mesh"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "SIM"]
